# Cpp_OpenCV_ex

./: CMakeLists.txt  display_image.cpp  lib.temp
